--- a/app/views/search/_search_result.html.erb
+++ b/app/views/search/_search_result.html.erb
@@ -1,22 +1,13 @@
-<tr class="search_row">
-  <td>
-    <span>
-      <%= image_tag statement.candidate.person_image_url, { width: '40px' } %>
-    </span>
-    <span>&nbsp;&nbsp;
-      <%= link_to statement.candidate.person_name, candidate_path(statement.candidate, search: "videos") %>
-    </span>
-  </td>
-  <td>
-    <%= statement.event_day.present? ? (statement.event_day.event.format_speakers.present? ? statement.event_day.event.format_speakers : 'N/A') : 'N/A' %>
-  </td>
-  <td>
-    <%= statement.event_day.present? ? (link_to statement.event_day.event.title, event_path(statement.event_day.event)) : 'N/A' %>
-  </td>
-  <td>
-    <%= statement.event_day.present? ? statement.event_day.event.format_location : 'N/A' %>
-  </td>
-  <td>
-    <%= statement.event_day.present? ? statement.event_day.date.strftime("%m/%d/%Y") : 'N/A' %>
-  </td>
-</tr>
+<div class="col-lg-4 search_row">
+  <div style="padding: 0">
+    <div class="col-lg-12"><%=AMERICA_NEW_YORK_TIME_ZONE.format_date(video.date)%></div>
+    <h4 class="col-lg-12">
+    <% if @current_user.admin? %>
+      <%=link_to "#{video.title}", edit_statement_path(video) %>
+    <% else %>
+      <%=video.title %>
+    <% end %>
+    </h4>
+    <iframe src="<%=video.youtube_embed_url%>?hd=1&rel=0&autohide=1&showinfo=0" frameborder="0"></iframe>
+  </div>
+</div>
