--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -23,41 +23,37 @@
   <div class="row">
     <div class="clearfix"></div>
     <div class="col-lg-12 frm-padmar2" style="margin-top: 20px">
-      <% if @statements.blank? %>
+      <% if @videos.blank? %>
         <div class="warning">Sorry, We didn't find any result.</div>
       <% else %>
-        <div class="table-responsive">
-          <table class="table table-striped table-hover search-table">
-            <thead>
-              <tr>
-                <th>Candidate(s)</th>
-                <th>Speaker(s)</th>
-                <th>Event Name</th>
-                <th>Location</th>
-                <th>Event Date</th>
-                <!-- <th>Public</th> -->
-              </tr>
-            </thead>
-            <tbody>
-              <% @statements.each do |statement| %>
-                <% if statement.candidate.present? %>
-                  <% if params[:t].present? %>
-                    <%= render partial: 'search_result', locals: {statement: statement} %>
-                  <% else %>
-                    <% if search_filter(statement) %>
-                      <%= render partial: 'search_result', locals: {statement: statement} %>
-                    <% end %>
-                  <% end %>
+        <div class="row">
+          <% @videos.each do |statement| %>
+            <% if statement.candidate.present? %>
+              <% if params[:t].present? %>
+                <%= render partial: 'search_result', locals: {video: statement} %>
+              <% else %>
+                <% if search_filter(statement) %>
+                  <%= render partial: 'search_result', locals: {video: statement} %>
                 <% end %>
               <% end %>
-            </tbody>
-          </table>
+            <% end %>
+          <% end %>
         </div>
       <% end %>
     </div>
   </div>
 </div>
-
+<% if params[:q].present? || params[:e].present? || params[:v].present? || params[:d].present? %>
+  <script type="text/javascript">
+    $('.tag-search-block').removeClass('search-active');
+    $('.tag-search-block').addClass('search-inactive');
+    $('.advance-search-block').addClass('search-active');
+    $("#advance-search-btn").addClass('acor-tab-btn');
+    $("#advance-search-btn").removeClass('acor-tab-btn2');
+    $("#tag-search-btn").removeClass("acor-tab-btn");
+    $("#tag-search-btn").addClass("acor-tab-btn2");
+  </script>
+<% end %>
 <script>
   if($(".search_row").length==0){
     $('#searchResult').hide();
@@ -76,6 +72,7 @@
       $("#advance-search-btn").removeClass('acor-tab-btn2');
       $("#tag-search-btn").removeClass("acor-tab-btn");
       $("#tag-search-btn").addClass("acor-tab-btn2");
+      $('.no-result-found').hide();
     });
     $("#tag-search-btn").on('click',function(e){
       e.preventDefault();
@@ -86,6 +83,7 @@
       $('.tag-search-block').addClass('search-active');
       $('.advance-search-block').addClass('search-inactive');
       $('.advance-search-block').removeClass('search-active');
+      $('.no-result-found').hide();
     });
   });
 </script>
