--- a/app/views/statements/_videos.html.erb
+++ b/app/views/statements/_videos.html.erb
@@ -5,7 +5,7 @@
       <div class="col-lg-12"><%=AMERICA_NEW_YORK_TIME_ZONE.format_date(video.date)%></div>
       <h4 class="col-lg-12">
       <% if @current_user.admin? %>
-        <%=link_to "#{video.title}", edit_statement_path(video) %>
+        <%=link_to video.title.truncate(31), edit_statement_path(video), title: video.title  %>
       <% else %>
         <%=video.title %>
       <% end %>
