--- a/app/views/statements/index.html.erb
+++ b/app/views/statements/index.html.erb
@@ -39,3 +39,10 @@
   </tbody>
 </table>
 <%= link_to 'New Statement', new_statement_path, class: "btn btn-primary" %>
+<script type="text/javascript">
+  $(document).on('click', '.edit-statement', function(){
+    var id = $(this).attr('statement_id');
+    var path = "https://"+window.location.host+"/statements/"+id+"/edit";
+    window.location.href = path;
+  });
+</script>
