--- a/app/views/statements/_search_form.html.erb
+++ b/app/views/statements/_search_form.html.erb
@@ -44,7 +44,7 @@
                 <div class="form-group">
                   <label for="inputEmail3" class="col-sm-12 adnwstdnt">Candidate Name</label>
                   <div class="col-sm-12">
-                    <%=select_tag 'q', options_for_select(Candidate.approved_videos.map{ |u| [u.person_name, u.person_name] }), class: "form-control" , :include_blank => 'Select Candidate' %>
+                    <%=select_tag 'q', options_for_select(candidate_list), class: "form-control" , :include_blank => 'Select Candidate' %>
                   </div>
                 </div>
               </div>
